--- a/layout.css
+++ b/layout.css
@@ -3,10 +3,13 @@
 
         font-size:20;
         font-style:italic;
-        color: black;
+    
         background-color:rgb(4, 0, 255);
         padding-top: 20px;
         padding-bottom: 20px;
         text-align: center;
         margin:0%;
     }
+   ul{
+    color: black;
+   }
