--- a/layout.css
+++ b/layout.css
@@ -3,7 +3,6 @@
 
         font-size:20;
         font-style:italic;
-    
         background-color:rgb(4, 0, 255);
         padding-top: 20px;
         padding-bottom: 20px;
@@ -11,5 +10,5 @@
         margin:0%;
     }
    ul{
-    color: black;
+    color: red;
    }
