--- a/layout.css
+++ b/layout.css
@@ -3,7 +3,7 @@
 
         font-size:20;
         font-style:italic;
-        background-color:rgb(0, 255, 195);
+        background-color:rgba(35, 224, 199, 0.833);
         padding-top: 20px;
         padding-bottom: 20px;
         text-align: center;
