--- a/assignments/layout.css
+++ b/assignments/layout.css
@@ -1,6 +1,6 @@
 
 h1{
-    text-align: center;
+    align-content: center;
     font-style: oblique;
     background-color: rgb(248, 6, 6);
 }
@@ -8,14 +8,13 @@ h1{
 
         font-size:50;
         font-style:italic;
-        color: crimson;
-        background-color:rgba(35, 224, 199, 0.833);
+        background-color:rgba(228, 31, 13, 0.833);
         padding-top: 20px;
         padding-bottom: 20px;
         text-align: center;
         margin:0%;
     }
    ul{
-    color: rgb(111, 7, 171);
+    color: black;
    
    }
