--- a/layout.css
+++ b/layout.css
@@ -1,5 +1,6 @@
 
 h1{
+    text-align: center;
     align-content: center;
     font-style: oblique;
     background-color: rgb(248, 6, 6);
@@ -14,7 +15,4 @@ h1{
         text-align: center;
         margin:0%;
     }
-   ul{
-    color: black;
    
-   }
