--- a/assignments/layout.css
+++ b/assignments/layout.css
@@ -1,6 +1,7 @@
 
 h1{
-    align-content: center;
+    text-align: center;
+    
     font-style: oblique;
     background-color: rgb(248, 6, 6);
 }
@@ -14,7 +15,4 @@ h1{
         text-align: center;
         margin:0%;
     }
-   ul{
-    color: rgb(91, 222, 21);
    
-   }
