--- a/assignments/assignment02.css
+++ b/assignments/assignment02.css
@@ -10,6 +10,8 @@
 
 
 /* --- pre-existing css --- */
+
+
 .stripey tr:nth-child(even) {
     background-color: gray;
   }
@@ -30,3 +32,20 @@
     background-color: pink;
   }
   
+
+
+  h1{
+    text-align: center; 
+    font-style: oblique;
+    background-color: rgb(248, 6, 6);
+}
+    nav{
+
+        font-size:50;
+        font-style:italic;
+        background-color:rgba(228, 31, 13, 0.833);
+        padding-top: 20px;
+        padding-bottom: 20px;
+        text-align: center;
+        margin:0%;
+    }
