--- a/assignments/assignment02.css
+++ b/assignments/assignment02.css
@@ -32,13 +32,6 @@
     background-color: pink;
   }
   
-
-
-  h1{
-    text-align: center; 
-    font-style: oblique;
-    background-color: rgb(248, 6, 6);
-}
     nav{
 
         font-size:50;
@@ -49,3 +42,48 @@
         text-align: center;
         margin:0%;
     }
+
+    .mini-navi-bar{
+          /* position: -webkit-sticky; */
+    position: sticky;
+    top: 0;
+    background-color:
+    rgba(0, 255, 0, 0.9);
+    padding: 5px;
+    font-size: 20px;
+    z-index: 2;
+
+    }
+
+    
+body { background-color: skyblue; }
+#igottabeme { font-family: Arial, Helvetica, sans-serif; }
+.classy { margin-left: 10px; }
+div { margin-bottom: 50px; }
+span {
+width: 100px;
+height: 50px;
+padding: 5px 20px;
+border: 5px solid blue;
+background-color: yellow;
+}
+span.a { display: inline; }
+span.b { display: block; }
+span.c { display: inline-block; }
+img[alt="cat icon"] {
+position: fixed;
+right: 0;
+bottom: 0;
+z-index: 1;
+}
+img[alt="dog icon"] {
+position: relative;
+right: 50px;
+bottom: 150px;
+}
+img[alt="bird icon"] {
+position: absolute;
+top: 50px;
+left: 250px;
+z-index: 1;
+}
